--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node -r dotenv/config src/server.js",
+    "dev": "nodemon -r dotenv/config src/server.js",
+    "lint": "eslint src/",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.3",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "fluent-ffmpeg": "^2.1.2",
     "iso-639-1": "^2.1.15",
-    "lru-cache": "^10.2.0",
-    "stremio-addon-sdk": "^1.6.10",
-    "webtorrent": "^1.9.7"
+    "lru-cache": "^10.0.0",
+    "node-fetch": "^3.3.0",
+    "stremio-addon-sdk": "^1.6.10"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22"
   }
 }
